tdf#150786 use the same colors for pdf widgets regardless of theme

use StyleSettings::SetStandardStyles()

Change-Id: Idf08872fabfe50cbc73091e17dd3ad7a4acc6715
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140900
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>